--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 
   <head>
       <meta charset='utf-8' />
-      <title>Jetlag Visualization</title>
+      <title>CoViD-19 Map</title>
       <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.25.1/mapbox-gl.css' rel='stylesheet' />
       <link href='https://www.mapbox.com/base/latest/base.css' rel='stylesheet' />
-      <link rel="stylesheet" href="awesomplete.css" />
-      <script src="awesomplete.js" async></script>
       <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.25.1/mapbox-gl.js'></script>
       <script src='https://api.mapbox.com/mapbox.js/plugins/arc.js/v0.1.0/arc.js'></script>
       <script src='https://npmcdn.com/@turf/turf@3.5.1/turf.min.js'></script>
