Working on parsing data

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </style>
   </head>
   <body>
+    <span id="confirmed"></span>
     <div id="map"></div>
     <script> 
     mapboxgl.accessToken = 'pk.eyJ1IjoiZGFzdWxpdCIsImEiOiJjaXQzYmFjYmkwdWQ5MnBwZzEzZnNub2hhIn0.EDJ-lIfX2FnKhPw3nqHcqg';
